<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="-61dp">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnfinish"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="187dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="67dp"
        android:backgroundTint="@color/green"
        android:src="@drawable/round_check_foreground"
        app:fabCustomSize="75dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        app:layout_constraintVertical_bias="0.19" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="107dp"
        android:layout_marginEnd="95dp"
        android:ems="10"
        android:hint="@string/nome"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.196" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="278dp"
        android:layout_height="59dp"
        android:layout_marginStart="66dp"
        android:layout_marginTop="67dp"
        android:layout_marginEnd="67dp"
        android:prompt="@string/spinner_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.56" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn1"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="67dp"
        android:layout_marginTop="187dp"
        android:layout_marginEnd="256dp"
        android:layout_marginBottom="67dp"
        android:backgroundTint="@color/green"
        android:src="@drawable/round_add_24"
        app:fabCustomSize="75dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        app:layout_constraintVertical_bias="0.19" />

    <EditText
        android:id="@+id/editTextNumberDecimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="224dp"
        android:ems="10"
        android:hint="@string/price"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNumber2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="107dp"
        android:layout_marginEnd="94dp"
        android:ems="10"
        android:hint="@string/quanti"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberDecimal"
        app:layout_constraintVertical_bias="0.543" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="202dp"
        android:layout_height="42dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="105dp"
        android:layout_marginBottom="64dp"
        android:text="@string/add"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>