<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background_image"
   >

    <TextView
        android:id="@+id/textBV"
        android:layout_width="132dp"
        android:layout_height="76dp"
        android:text="@string/welcome"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.268" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="193dp"
        android:layout_height="48dp"
        android:layout_marginStart="107dp"
        android:layout_marginTop="343dp"
        android:layout_marginEnd="108dp"
        android:layout_marginBottom="88dp"
        android:background="@drawable/btn1"
        android:text="@string/enter"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textBV"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/nome"
        android:layout_width="193dp"
        android:layout_height="32dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="240dp"
        android:layout_marginEnd="109dp"
        android:layout_marginBottom="58dp"
        android:background="@drawable/edittext"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/btn1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.882"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textBV"
        app:layout_constraintVertical_bias="0.714" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="151dp"
        android:layout_marginTop="59dp"
        android:layout_marginEnd="152dp"
        android:layout_marginBottom="83dp"
        app:layout_constraintBottom_toTopOf="@+id/nome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textBV"
        app:srcCompat="@drawable/logo_foreground" />


</androidx.constraintlayout.widget.ConstraintLayout>