<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstActivity">


    <EditText
        android:id="@+id/data2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginEnd="101dp"
        android:ems="10"
        android:focusable="false"
        android:inputType=""
        android:hint="@string/data2"
        app:layout_constraintBottom_toTopOf="@+id/btnTotal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.791" />

    <EditText
        android:id="@+id/textHello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="101dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="494dp"
        android:ems="10"
        android:focusable="false"
        android:inputType=""
        android:text="@string/welcome"
        app:layout_constraintBottom_toTopOf="@+id/btnver"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/edittext"
        />

    <TextView
        android:id="@+id/total"
        android:layout_width="299dp"
        android:layout_height="97dp"
        android:layout_marginStart="162dp"
        android:layout_marginTop="324dp"
        android:layout_marginEnd="191dp"
        android:layout_marginBottom="242dp"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.441"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textHello"
        app:layout_constraintVertical_bias="0.156" />

    <EditText
        android:id="@+id/data1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="100dp"
        android:ems="10"
        android:focusable="false"
        android:inputType=""
        android:hint="@string/data1"
        app:layout_constraintBottom_toTopOf="@+id/data2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textHello"
        />

    <Button
        android:id="@+id/btnTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginEnd="163dp"
        android:layout_marginBottom="340dp"
        android:text="@string/ver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/btn1"/>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnver"
        android:layout_width="75dp"
        android:layout_height="75dp"
        app:fabCustomSize="75dp"
        android:backgroundTint="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.836"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.975"
        android:src="@drawable/round_receipt_24"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnadd"
        android:layout_width="75dp"
        android:layout_height="75dp"
        app:fabCustomSize="75dp"
        android:src="@drawable/round_add_24"
        android:backgroundTint="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnver"
        app:layout_constraintHorizontal_bias="0.29"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976"
       />

</androidx.constraintlayout.widget.ConstraintLayout>